[WIP] Massive update
Trying to make it work.

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="o-page">
+<div class="container-fluid">
   <div class="o-page__content u-pd-content">
     <div class="u-centered u-container--condensed">
       <h1 class="u-margin-bottom--large">Resend confirmation instructions</h1>
