--- a/app/views/layouts/lcms/engine/admin.html.erb
+++ b/app/views/layouts/lcms/engine/admin.html.erb
@@ -13,7 +13,9 @@
   <body>
     <%= render partial: 'lcms/engine/shared/header' %>
     <%= render partial: 'lcms/engine/shared/flash' %>
-    <%= yield %>
+    <div class="container-fluid">
+      <%= yield %>
+    </div>
     <%#= render partial: 'lcms/engine/shared/footer' %>
   </body>
 </html>
