--- a/app/views/lcms/engine/admin/access_codes/index.html.erb
+++ b/app/views/lcms/engine/admin/access_codes/index.html.erb
@@ -1,4 +1,4 @@
-<div class=o-page>
+<div class="container-fluid">
   <div class=clearfix>
     <div class=pull-right>
       <%= link_to t('.new_access_code'), lcms_engine.new_admin_access_code_path, class: 'button success', 'data-turbo' => false %>
