--- a/app/views/lcms/engine/admin/batch_reimports/import.html.erb
+++ b/app/views/lcms/engine/admin/batch_reimports/import.html.erb
@@ -1,6 +1,6 @@
 <% set_page_title 'Batch Import' %>
 
-<div class="o-page">
+<div class="container-fluid">
   <h2 class="text-center">Batch Reimport</h2>
 
   <div class="row">
