--- a/app/views/lcms/engine/admin/batch_reimports/new.html.erb
+++ b/app/views/lcms/engine/admin/batch_reimports/new.html.erb
@@ -1,6 +1,6 @@
 <% set_page_title 'Batch Reimport' %>
 
-<div class="o-page">
+<div class="container-fluid">
 
   <h1 class="text-center">Select Resources to Reimport</h1>
 
