--- a/app/views/lcms/engine/admin/documents/index.html.erb
+++ b/app/views/lcms/engine/admin/documents/index.html.erb
@@ -1,6 +1,6 @@
 <% set_page_title 'Lessons Manager' %>
 
-<div class="o-page o-adm-list o-adm-documents">
+<div class="container-fluid o-adm-list o-adm-documents">
 
   <h1 class=text-center><%= t('.title') %></h1>
 
