--- a/app/views/lcms/engine/admin/materials/index.html.erb
+++ b/app/views/lcms/engine/admin/materials/index.html.erb
@@ -1,6 +1,6 @@
 <% set_page_title 'Materials Manager' %>
 
-<div class="o-page o-adm-list">
+<div class="container-fluid o-adm-list">
 
   <%= render 'import_results', results: @results if @results %>
 
