--- a/app/views/lcms/engine/admin/resources/index.html.erb
+++ b/app/views/lcms/engine/admin/resources/index.html.erb
@@ -1,6 +1,6 @@
 <% page_title %>
 
-<h2 class=text-center><%= t('.page_title') %></h2>
+<h2 class="text-center p-4"><%= t('.page_title') %></h2>
 
 <%= render 'search_form' %>
 
@@ -11,51 +11,47 @@
 
 <p class=text-right><%= page_entries_info @resources %>
 
-<%= form_tag :new_admin_resource_bulk_edits, method: :get do %>
-  <table class=table>
-    <tr>
-      <th><%= check_box_tag nil, nil, false, class: 'resource-list-select-all' %>
-      <th>ID
-      <th><%= t('.title') %>
-      <th><%= t('.teaser') %>
-      <th><%= t('.standards') %>
-      <th><%= t('.resource_types') %>
-      <th><%= t('.subjects') %>
-      <th><%= t('.url_slugs') %>
-      <th><%= t('.tree') %>
-      <th><%= t('.status') %>
-      <th>
+<table class="table table-striped table-bordered">
+  <tr>
+    <th><%= check_box_tag nil, nil, false, class: 'resource-list-select-all' %>
+    <th>ID
+    <th><%= t('.title') %>
+    <th><%= t('.teaser') %>
+    <th><%= t('.standards') %>
+    <th><%= t('.resource_types') %>
+    <th><%= t('.subjects') %>
+    <th><%= t('.url_slugs') %>
+    <th><%= t('.tree') %>
+    <th><%= t('.status') %>
+    <th>
+  </tr>
+
+  <% @resources.each do |resource| %>
+    <% cache resource do %>
+      <tr>
+      <% check_box_id = "ids_#{resource.id}" %>
+      <td><%= check_box_tag 'ids[]', resource.id, false, class: 'resource-checkbox', id: check_box_id %>
+      <td><%= label_tag check_box_id, resource.id, class: 'resource-id-label' %>
+      <td><%= link_to resource.title, lcms_engine.edit_admin_resource_path(resource) %>
+      <td class="resource-tag-col"><%= strip_tags resource.teaser %>
+      <td class="resource-tag-col"><%= resource.standards.map(&:name).select(&:present?).join(', ') %>
+      <td class="resource-tag-col"><%= resource.resource_type %>
+      <td class="resource-tag-col"><%= resource.subject %>
+      <td class="resource-tag-col"><%= resource.slug %>
+      <td class="resource-tag-col"><%= resource.tree? ? 'yes' : 'no' %>
+      <td><%= resource_status(resource) %>
+      <td class="resource-btns-col">
+        <%= link_to t('ui.edit'), lcms_engine.edit_admin_resource_path(resource), class: 'button small' %>
+        <% if can_bundle? resource %>
+          <%= link_to t('.bundle'), lcms_engine.bundle_admin_resource_path(resource), class: 'button small primary', method: :post %>
+        <% end %>
+        <% if resource.module? %>
+          <%= link_to t('.export_lti_cartridge'), lcms_engine.export_to_lti_cc_admin_resource_path(resource), class: 'button small primary', method: :post %>
+        <% end %>
     </tr>
-
-    <% @resources.each do |resource| %>
-      <% cache resource do %>
-        <tr>
-        <% check_box_id = "ids_#{resource.id}" %>
-        <td><%= check_box_tag 'ids[]', resource.id, false, class: 'resource-checkbox', id: check_box_id %>
-        <td><%= label_tag check_box_id, resource.id, class: 'resource-id-label' %>
-        <td><%= link_to resource.title, lcms_engine.edit_admin_resource_path(resource) %>
-        <td class="resource-tag-col"><%= strip_tags resource.teaser %>
-        <td class="resource-tag-col"><%= resource.standards.map(&:name).select(&:present?).join(', ') %>
-        <td class="resource-tag-col"><%= resource.resource_type %>
-        <td class="resource-tag-col"><%= resource.subject %>
-        <td class="resource-tag-col"><%= resource.slug %>
-        <td class="resource-tag-col"><%= resource.tree? ? 'yes' : 'no' %>
-        <td><%= resource_status(resource) %>
-        <td class="resource-btns-col">
-          <%= link_to t('ui.edit'), lcms_engine.edit_admin_resource_path(resource), class: 'button small' %>
-          <% if can_bundle? resource %>
-            <%= link_to t('.bundle'), lcms_engine.bundle_admin_resource_path(resource), class: 'button small primary', method: :post %>
-          <% end %>
-          <% if resource.module? %>
-            <%= link_to t('.export_lti_cartridge'), lcms_engine.export_to_lti_cc_admin_resource_path(resource), class: 'button small primary', method: :post %>
-          <% end %>
-      </tr>
-      <% end %>
     <% end %>
-  </table>
-
-  <%= submit_tag 'Edit Selected', class: 'button', name: nil %>
-<% end %>
+  <% end %>
+</table>
 
 <div class=text-center>
   <%= will_paginate @resources %>
