--- a/app/views/lcms/engine/admin/sketch_compilers/new.html.erb
+++ b/app/views/lcms/engine/admin/sketch_compilers/new.html.erb
@@ -1,4 +1,4 @@
-<div class=o-page>
+<div class="container-fluid">
   <h2 class=text-center><%= t'.page_title', version: @version %></h2>
 
   <%= form_tag compile_admin_sketch_compiler_path(@version) do %>
