--- a/app/views/lcms/engine/admin/users/index.html.erb
+++ b/app/views/lcms/engine/admin/users/index.html.erb
@@ -1,6 +1,6 @@
 <% set_page_title 'Users' %>
 
-<div class="o-page">
+<div class="container-fluid">
   <h1 class="text-center"><%= t('.page_title') %></h1>
 
   <%= render 'search_form' %>
