--- a/app/views/lcms/engine/resources/generic.html.erb
+++ b/app/views/lcms/engine/resources/generic.html.erb
@@ -1,6 +1,6 @@
 <% set_page_title @resource.title %>
 
-<div class="o-page o-page--margin-to-bottom">
+<div class="container-fluid o-page--margin-to-bottom">
   <%= render partial: 'lcms/engine/resources/header', locals: { resource: @resource } %>
   <div class="o-page__section u-padding-top--gutter u-bg--light">
     <div class="o-resource-title">
