--- a/app/views/lcms/engine/resources/media.html.erb
+++ b/app/views/lcms/engine/resources/media.html.erb
@@ -1,6 +1,6 @@
 <% set_page_title @resource.title %>
 
-<div class="o-page o-page--margin-to-bottom">
+<div class="container-fluid o-page--margin-to-bottom">
   <div class="o-page__section cs-bg--<%= color_code(@resource) %>">
     <div class="o-content-title u-text--capitalized">
       <%= @resource.media_title %>
