--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="o-page">
+<div class="container-fluid">
   <div class="o-page__content u-pd-content">
     <div class="u-centered u-container--condensed">
       <h1 class="u-margin-bottom--large">Change your password</h1>
