--- a/app/views/lcms/engine/admin/documents/new.html.erb
+++ b/app/views/lcms/engine/admin/documents/new.html.erb
@@ -1,4 +1,4 @@
-<div class="o-page">
+<div class="container-fluid">
   <h2 class=text-center><%= t('.page_title') %></h2>
 
   <%= simple_form_for @document || DocumentForm.new, url: lcms_engine.admin_documents_path do |f| %>
