--- a/app/views/lcms/engine/admin/resources/edit.html.erb
+++ b/app/views/lcms/engine/admin/resources/edit.html.erb
@@ -2,12 +2,12 @@
 
 <% set_page_title title %>
 
-<div class=o-page>
-  <h2 class=text-center><%= title %></h2>
+<div class="container-fluid p-3">
+  <h2 class="text-center"><%= title %></h2>
 
   <% unless Lcms::Engine::Settings[:editing_enabled] %>
-    <div class='callout warning'><%= t('admin.common.editing_disabled') %></div>
+    <div class='alert alert-warning'><%= t('admin.common.editing_disabled') %></div>
   <% end %>
 
-  <%= render 'form' %>
+  <%#= render 'form' %>
 </div>
