--- a/app/views/lcms/engine/admin/standards/edit.html.erb
+++ b/app/views/lcms/engine/admin/standards/edit.html.erb
@@ -2,7 +2,7 @@
 
 <% set_page_title title %>
 
-<div class=o-page>
+<div class="container-fluid">
   <h2 class=text-center><%= title %></h2>
 
   <%= render 'form' %>
