--- a/app/views/lcms/engine/documents/_sticky_header.html.erb
+++ b/app/views/lcms/engine/documents/_sticky_header.html.erb
@@ -1,7 +1,7 @@
 <div id="ld-sticky-header" class="c-sticky-header" data-sticky-container>
   <div class="sticky is-anchored" data-sticky data-stick-to="top" data-anchor="ld-page" data-margin-top="0" data-sticky-on="small">
     <div class="cs-rgba-bg--<%= document.color_code_grade %>">
-      <nav class="o-page c-sticky-header__wrap">
+      <nav class="container-fluid c-sticky-header__wrap">
         <div class="c-sticky-header__item cs-bg--<%= document.subject %>-dark show-for-large">
           <%= link_to lcms_engine.root_path, class: 'c-sticky-header__link' do %>
             <%= image_tag('lcms/engine/logo-beta.svg') %>
@@ -35,7 +35,7 @@
       </nav>
     </div>
     <div class="c-sticky-header-dropdown__wrap">
-      <div class="o-page">
+      <div class="container-fluid">
         <div class="c-sticky-header-dropdown c-sticky-header-menu" id="ld-dropdown" data-toggler data-animate="fade-in fade-out">
           <ul class="o-ld-sidebar__menu doc-subject-<%= document.math? ? 'math' : 'ela' %> o-ld-unit-map--padding<%= document.resource.siblings.count >= 5 ? 5 : document.resource.siblings.count % 5 %>" data-accordion-menu data-slide-speed="200">
             <%= render 'nav_contents', document: document %>
