--- a/app/views/lcms/engine/admin/resources/_form.html.erb
+++ b/app/views/lcms/engine/admin/resources/_form.html.erb
@@ -8,7 +8,7 @@
       <%= f.button :submit, t('ui.save'), name: nil %>
 
       <% if @resource.persisted? %>
-        <%= link_to t('ui.delete'), admin_resource_path(@resource), class: 'button alert', data: { confirm: t('ui.are_you_sure') }, method: :delete %>
+        <%= link_to t('ui.delete'), admin_resource_path(@resource), class: 'btn btn-danger', data: { confirm: t('ui.are_you_sure') }, method: :delete %>
       <% end %>
     <% end %>
   </div>
