--- a/app/views/lcms/engine/admin/users/_form.html.erb
+++ b/app/views/lcms/engine/admin/users/_form.html.erb
@@ -1,11 +1,18 @@
-<%= simple_form_for @user, url: @url.presence || lcms_engine.admin_users_path, html: { id: 'user_form' }, data: { turbo: false } do |f| %>
-  <%= f.input :id, disabled: true %>
-  <%= f.input :name %>
-  <%= f.input :email %>
-  <%= f.input :role, collection: Lcms::Engine::User.roles.keys, include_blank: false %>
-  <%= f.input :access_code, disabled: @user.persisted? %>
-  <%= f.input :confirmed_at, disabled: true, as: :text %>
+<div class="col-sm-3">
+  <%= simple_form_for @user, url: @url.presence || lcms_engine.admin_users_path, html: { id: 'user_form' }, data: { turbo: false } do |f| %>
+    <% if @user.persisted? %>
+      <%= f.input :id, disabled: true %>
+    <% end %>
 
+    <%= f.input :name %>
+    <%= f.input :email %>
+    <%= f.input :role, collection: Lcms::Engine::User.roles.keys, include_blank: false %>
+    <%= f.input :access_code, disabled: @user.persisted? %>
 
-  <%= f.button :submit, t('ui.save'), name: nil %>
-<% end %>
+    <% if @user.persisted? %>
+      <%= f.input :confirmed_at, disabled: true, as: :string %>
+    <% end %>
+
+    <%= f.button :submit, t('ui.save'), name: nil, class: 'btn btn-primary' %>
+  <% end %>
+</div>
