--- a/app/views/lcms/engine/admin/users/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/users/_search_form.html.erb
@@ -4,7 +4,11 @@
     <%= f.input :email, label: false, required: false, placeholder: 'Search by E-mail', wrapper_html: { class: 'o-admin-search-term' } %>
     <%= f.input :access_code, label: false, required: false, placeholder: 'Enter Access Code', wrapper_html: { class: 'o-admin-search-term' } %>
 
-    <%= f.button :submit, t('ui.search'), class: 'o-admin-search-submit primary', name: nil %>
+    <div class="row justify-content-center">
+      <div class="col-sm-1">
+        <%= f.button :submit, t('ui.search'), class: 'btn btn-warning', name: nil %>
+      </div>
+    </div>
   </div>
 
 <% end %>
