--- a/app/views/lcms/engine/admin/users/index.html.erb
+++ b/app/views/lcms/engine/admin/users/index.html.erb
@@ -3,12 +3,17 @@
 <div class="container-fluid">
   <h1 class="text-center"><%= t('.page_title') %></h1>
 
-  <%= render 'search_form' %>
+  <hr>
 
   <div class="row">
-    <div class="flex-pull-right">
-      <%= link_to t('.new_user'), lcms_engine.new_admin_user_path, class: 'button success' %>
-    </div>
+    <div class="col-sm-9"><%= link_to t('.new_user'), lcms_engine.new_admin_user_path, class: 'btn btn-success' %></div>
+    <div class="col-sm-3"><%= render 'search_form' %></div>
+
+  </div>
+
+  <hr>
+
+  <div class="row">
     <table class="table">
       <tr>
         <th><%= t('.id') %>
@@ -18,7 +23,6 @@
         <th><%= t('.access_code') %>
         <th><%= t('.confirmed') %>
         <th><%= t('.registration') %>
-        <th>
         <th>
         <th>
       </tr>
@@ -33,9 +37,8 @@
             <td><%= user.access_code.presence || '-' %>
             <td><%= user.confirmed? ? 'YES' : 'NO' %>
             <td class="u-txt--small"><%= user.created_at.to_s %>
-            <td><%= link_to content_tag(:i, nil, class: 'fas fa-pencil-alt').html_safe, lcms_engine.edit_admin_user_path(user), class: 'button small primary' %>
-            <td><%= button_to t('.reset_password_btn'), lcms_engine.reset_password_admin_user_path(user), class: 'button small', data: { confirm: t('ui.are_you_sure') }, form_class: 'inline', method: :post %>
-            <td><%= button_to t('ui.delete'), lcms_engine.admin_user_path(user), class: 'button small alert', data: { confirm: t('ui.are_you_sure') }, form_class: 'inline', method: :delete %></td>
+            <td><%= button_to t('.reset_password_btn'), lcms_engine.reset_password_admin_user_path(user), class: 'btn btn-warning', data: { confirm: t('ui.are_you_sure') }, form_class: 'inline', method: :post %>
+            <td><%= button_to t('ui.delete'), lcms_engine.admin_user_path(user), class: 'btn btn-danger', data: { confirm: t('ui.are_you_sure') }, form_class: 'inline', method: :delete %></td>
           </tr>
         <% end %>
       <% end %>
