--- a/app/views/lcms/engine/admin/resources/_fields.html.erb
+++ b/app/views/lcms/engine/admin/resources/_fields.html.erb
@@ -16,7 +16,8 @@
 
 <%= f.input :opr_description, label: t('lcms.engine.admin.resources.form.opr_description'), wrapper_html: {class: (resource.unit? ? '': 'c-hidden')} %>
 
-<%= render_component('admin/curriculum/DirectoryPicker', directory_picker_props(resource)) %>
+<%# TODO: Enable this back %>
+<%#= render_component('DirectoryPicker', directory_picker_props(resource)) %>
 
 <%= f.input :time_to_teach %>
 
@@ -24,25 +25,32 @@
 
 <%= f.input :hidden %>
 
-<%= f.input :description, as: :ckeditor, input_html: { rows: 10 } %>
+<%#= f.input :description, as: :ckeditor, input_html: { rows: 10 } %>
 
 <br>
 
 <%= f.input :url %>
 
-<%= association_picker_field(f, resource.reading_assignment_texts, path: :reading_assignment_texts, name: :reading_assignment_text_ids, allow_create: false, allow_multiple: true) %>
+<%# TODO: Enable this back %>
+<%#= association_picker_field(f, resource.reading_assignment_texts, path: :reading_assignment_texts, name: :reading_assignment_text_ids, allow_create: false, allow_multiple: true) %>
 
-<%= association_picker_field(f, resource.content_sources, path: :content_sources, name: :content_source_ids, create_name: :new_content_source_names, allow_create: true, allow_multiple: true) %>
+<%# TODO: Enable this back %>
+<%#= association_picker_field(f, resource.content_sources, path: :content_sources, name: :content_source_ids, create_name: :new_content_source_names, allow_create: true, allow_multiple: true) %>
 
-<%= association_picker_field(f, resource.topics, path: :topics, name: :topic_ids, create_name: :new_topic_names, allow_create: true) %>
+<%# TODO: Enable this back %>
+<%#= association_picker_field(f, resource.topics, path: :topics, name: :topic_ids, create_name: :new_topic_names, allow_create: true) %>
 
-<%= association_picker_field(f, resource.tags, path: :tags, name: :tag_ids, create_name: :new_tag_names, allow_create: true) %>
+<%# TODO: Enable this back %>
+<%#= association_picker_field(f, resource.tags, path: :tags, name: :tag_ids, create_name: :new_tag_names, allow_create: true) %>
 
-<%= association_picker_field(f, resource.standards.distinct, path: :standards, name: :standard_ids) %>
+<%# TODO: Enable this back %>
+<%#= association_picker_field(f, resource.standards.distinct, path: :standards, name: :standard_ids) %>
 
-<%= resource_picker_field(f, resource.related_resources, path: :related_resources, name: :related_resource_ids) %>
+<%# TODO: Enable this back %>
+<%#= resource_picker_field(f, resource.related_resources, path: :related_resources, name: :related_resource_ids) %>
 
-<%= resource_picker_field(f, resource.additional_resources, path: :additional_resources, name: :additional_resource_ids) %>
+<%# TODO: Enable this back %>
+<%#= resource_picker_field(f, resource.additional_resources, path: :additional_resources, name: :additional_resource_ids) %>
 
 <% if f.object.image_file.url %>
   <%= f.label :current_image %>
@@ -50,26 +58,3 @@
 <% end %>
 
 <%= f.input :image_file, as: :file %>
-
-<div class=form-group>
-  <%= render partial: 'download_categories', locals: { f: f } %>
-  <%= f.label :resource_downloads %>
-  <%= f.fields_for :resource_downloads do |resource_download_fields| %>
-    <div class="o-adm-download">
-      <%= resource_download_fields.simple_fields_for :download, resource_download_fields.object&.download || Lcms::Engine::Download.new do |download_fields| %>
-        <%= download_fields.input :title %>
-        <% unless download_fields.object.new_record? %>
-          <%= f.label :current_file %>
-          <%= link_to(download_fields.object.file.filename, attachment_url(download_fields.object), target: '_blank', class: 'resource-attachment') %>
-        <% end %>
-        <%= download_fields.input :file, as: :file %>
-        <%= download_fields.input_field :filename_cache, as: :hidden %>
-        <%= download_fields.input :main %>
-      <% end %>
-      <%= resource_download_fields.input :description, label: t('lcms.engine.admin.resources.downloadable.description') %>
-      <%= resource_download_fields.association :download_category, as: :select %>
-      <%= resource_download_fields.link_to_remove t('ui.remove'), class: 'small button' %>
-    </div>
-  <% end %>
-  <p><%= f.link_to_add t('lcms.engine.admin.resources.form.add_download'), :resource_downloads, class: 'small button' %></p>
-</div>
