--- a/app/views/lcms/engine/admin/resources/_form.html.erb
+++ b/app/views/lcms/engine/admin/resources/_form.html.erb
@@ -1,11 +1,11 @@
-<% url = @resource.new_record? ? lcms_engine.admin_resources_path : lcms_engine.admin_resource_path(@resource) %>
+<%# url = @resource.new_record? ? lcms_engine.admin_resources_path : lcms_engine.admin_resource_path(@resource) %>
 
-<%= simple_nested_form_for @resource, url: url, html: { id: 'resource_form' } do |f| %>
+<%= simple_form_for @resource do |f| %>
   <div class="large-10 columns">
     <%= render partial: 'fields', locals: { f: f, resource: @resource } %>
 
     <% if Lcms::Engine::Settings[:editing_enabled] %>
-      <%= f.button :submit, t('ui.save'), name: nil %>
+      <%= f.button :submit, t('ui.save'), name: nil, class: 'btn btn-primary' %>
 
       <% if @resource.persisted? %>
         <%= link_to t('ui.delete'), admin_resource_path(@resource), class: 'btn btn-danger', data: { confirm: t('ui.are_you_sure') }, method: :delete %>
