--- a/app/views/lcms/engine/admin/resources/edit.html.erb
+++ b/app/views/lcms/engine/admin/resources/edit.html.erb
@@ -5,9 +5,17 @@
 <div class="container-fluid p-3">
   <h2 class="text-center"><%= title %></h2>
 
+  <hr>
+
   <% unless Lcms::Engine::Settings[:editing_enabled] %>
     <div class='alert alert-warning'><%= t('admin.common.editing_disabled') %></div>
   <% end %>
 
-  <%#= render 'form' %>
+  <div class="cols-sm">
+    <%= link_to 'Back to list', lcms_engine.admin_resources_path, class: 'btn btn-success' %>
+  </div>
+
+  <hr>
+
+  <%= render 'form' %>
 </div>
