--- a/app/views/lcms/engine/admin/resources/index.html.erb
+++ b/app/views/lcms/engine/admin/resources/index.html.erb
@@ -1,58 +1,67 @@
 <% page_title %>
 
-<h2 class="text-center p-4"><%= t('.page_title') %></h2>
+<div class="container-fluid">
+  <h1 class="text-center p-4"><%= t('.page_title') %></h1>
 
-<%= render 'search_form' %>
+  <hr>
 
-<p class=text-right>
-  <%= link_to :toggle_editing_enabled_admin_settings, class: 'button', method: :patch do %>
-    <%= Lcms::Engine::Settings[:editing_enabled] ? t('.disable_editing') : t('.enable_editing') %>
-  <% end %>
+  <%= render 'search_form' %>
 
-<p class=text-right><%= page_entries_info @resources %>
+  <hr>
 
-<table class="table table-striped table-bordered">
-  <tr>
-    <th><%= check_box_tag nil, nil, false, class: 'resource-list-select-all' %>
-    <th>ID
-    <th><%= t('.title') %>
-    <th><%= t('.teaser') %>
-    <th><%= t('.standards') %>
-    <th><%= t('.resource_types') %>
-    <th><%= t('.subjects') %>
-    <th><%= t('.url_slugs') %>
-    <th><%= t('.tree') %>
-    <th><%= t('.status') %>
-    <th>
-  </tr>
+  <div class="row">
+    <div class="col-sm-3">
+      <p class><%= page_entries_info @resources %></p>
+    </div>
+    <div class="col-sm-9 text-end">
+      <%= link_to :toggle_editing_enabled_admin_settings, class: 'btn btn-danger', method: :patch do %>
+        <%= Lcms::Engine::Settings[:editing_enabled] ? t('.disable_editing') : t('.enable_editing') %>
+      <% end %>
+    </div>
+  </div>
 
-  <% @resources.each do |resource| %>
-    <% cache resource do %>
-      <tr>
-      <% check_box_id = "ids_#{resource.id}" %>
-      <td><%= check_box_tag 'ids[]', resource.id, false, class: 'resource-checkbox', id: check_box_id %>
-      <td><%= label_tag check_box_id, resource.id, class: 'resource-id-label' %>
-      <td><%= link_to resource.title, lcms_engine.edit_admin_resource_path(resource) %>
-      <td class="resource-tag-col"><%= strip_tags resource.teaser %>
-      <td class="resource-tag-col"><%= resource.standards.map(&:name).select(&:present?).join(', ') %>
-      <td class="resource-tag-col"><%= resource.resource_type %>
-      <td class="resource-tag-col"><%= resource.subject %>
-      <td class="resource-tag-col"><%= resource.slug %>
-      <td class="resource-tag-col"><%= resource.tree? ? 'yes' : 'no' %>
-      <td><%= resource_status(resource) %>
-      <td class="resource-btns-col">
-        <%= link_to t('ui.edit'), lcms_engine.edit_admin_resource_path(resource), class: 'button small' %>
-        <% if can_bundle? resource %>
-          <%= link_to t('.bundle'), lcms_engine.bundle_admin_resource_path(resource), class: 'button small primary', method: :post %>
-        <% end %>
-        <% if resource.module? %>
-          <%= link_to t('.export_lti_cartridge'), lcms_engine.export_to_lti_cc_admin_resource_path(resource), class: 'button small primary', method: :post %>
-        <% end %>
+  <hr>
+
+  <table class="table table-striped table-bordered">
+    <tr>
+      <th><%= check_box_tag nil, nil, false, class: 'resource-list-select-all' %>
+      <th>ID
+      <th><%= t('.title') %>
+      <th><%= t('.standards') %>
+      <th><%= t('.resource_types') %>
+      <th><%= t('.subjects') %>
+      <th><%= t('.url_slugs') %>
+      <th><%= t('.tree') %>
+      <th><%= t('.status') %>
+      <th>
     </tr>
-    <% end %>
-  <% end %>
-</table>
 
-<div class=text-center>
-  <%= will_paginate @resources %>
+    <% @resources.each do |resource| %>
+      <% cache resource do %>
+        <tr>
+        <% check_box_id = "ids_#{resource.id}" %>
+        <td><%= check_box_tag 'ids[]', resource.id, false, class: 'resource-checkbox', id: check_box_id %>
+        <td><%= label_tag check_box_id, resource.id, class: 'resource-id-label' %>
+        <td><%= link_to resource.title, lcms_engine.edit_admin_resource_path(resource) %>
+        <td class="resource-tag-col"><%= resource.standards.filter_map(&:name).join(', ') %>
+        <td class="resource-tag-col"><%= resource.resource_type %>
+        <td class="resource-tag-col"><%= resource.subject %>
+        <td class="resource-tag-col"><%= resource.slug %>
+        <td class="resource-tag-col"><%= resource.tree? ? 'yes' : 'no' %>
+        <td><%= resource_status(resource) %>
+        <td class="resource-btns-col">
+          <% if can_bundle?(resource) %>
+            <%= link_to t('.bundle'), lcms_engine.bundle_admin_resource_path(resource), class: 'btn btn-sm btn-primary', method: :post %>
+          <% end %>
+          <% if resource.module? %>
+            <%= link_to t('.export_lti_cartridge'), lcms_engine.export_to_lti_cc_admin_resource_path(resource), class: 'btn btn-sm btn-primary', method: :post %>
+          <% end %>
+      </tr>
+      <% end %>
+    <% end %>
+  </table>
+
+  <div class=text-center>
+    <%= will_paginate @resources %>
+  </div>
 </div>
