--- a/app/views/lcms/engine/admin/standards/index.html.erb
+++ b/app/views/lcms/engine/admin/standards/index.html.erb
@@ -2,7 +2,11 @@
 
   <h2 class=text-center>Standards</h2>
 
-  <%= render 'search_form' %>
+  <div class="row">
+    <%= render 'search_form' %>
+  </div>
+
+  <hr>
 
   <div class=row>
     <div class="col-md-12 o-admin-standards-table">
