--- a/app/views/lcms/engine/admin/resources/index.html.erb
+++ b/app/views/lcms/engine/admin/resources/index.html.erb
@@ -14,7 +14,7 @@
       <p class><%= page_entries_info @resources %></p>
     </div>
     <div class="col-sm-9 text-end">
-      <%= link_to :toggle_editing_enabled_admin_settings, class: 'btn btn-danger', method: :patch do %>
+      <%= link_to lcms_engine.toggle_editing_enabled_admin_settings_path, class: 'btn btn-danger', data: { 'turbo-method': 'patch' } do %>
         <%= Lcms::Engine::Settings[:editing_enabled] ? t('.disable_editing') : t('.enable_editing') %>
       <% end %>
     </div>
