--- a/app/views/lcms/engine/admin/resources/_fields.html.erb
+++ b/app/views/lcms/engine/admin/resources/_fields.html.erb
@@ -1,60 +1,63 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
 
-<%= f.input :title %>
+<div class="col-6">
+  <%= f.input :title %>
 
-<%= f.input :short_title %>
+  <%= f.input :short_title %>
 
-<%= f.input :subtitle %>
+  <%= f.input :subtitle %>
 
-<%= f.input :teaser, as: :text %>
+  <%= f.input :teaser, as: :text, input_html: { rows: 3 } %>
 
-<%= f.input :resource_type, as: :select, collection: Lcms::Engine::Resource.resource_types, value_method: :first %>
+  <%= f.input :resource_type, as: :select, collection: Lcms::Engine::Resource.resource_types, value_method: :first %>
 
-<%= f.input :tree, label: 'Belongs to Curriculum Tree?', as: :boolean %>
+  <%= f.input :tree, label: 'Belongs to Curriculum Tree?', as: :boolean %>
 
-<%= f.input :curriculum_type, as: :select, collection: Lcms::Engine::Resource.hierarchy %>
+  <%= f.input :curriculum_type, as: :select, collection: Lcms::Engine::Resource.hierarchy %>
 
-<%= f.input :opr_description, label: t('lcms.engine.admin.resources.form.opr_description'), wrapper_html: {class: (resource.unit? ? '': 'c-hidden')} %>
+  <%= f.input :opr_description, label: t('lcms.engine.admin.resources.form.opr_description'), wrapper_html: {class: (resource.unit? ? '': 'c-hidden')} %>
 
-<%# TODO: Enable this back %>
-<%#= render_component('DirectoryPicker', directory_picker_props(resource)) %>
+  <%# TODO: Enable this back %>
+  <%#= render_component('DirectoryPicker', directory_picker_props(resource)) %>
 
-<%= f.input :time_to_teach %>
+  <%= f.input :time_to_teach %>
 
-<%= f.input :ell_appropriate %>
+  <%= f.input :ell_appropriate %>
 
-<%= f.input :hidden %>
+  <%= f.input :hidden %>
 
-<%#= f.input :description, as: :ckeditor, input_html: { rows: 10 } %>
+  <%= f.input :description, as: :ckeditor, input_html: { rows: 10 } %>
 
-<br>
+  <br>
 
-<%= f.input :url %>
+  <%= f.input :url %>
 
-<%# TODO: Enable this back %>
-<%#= association_picker_field(f, resource.reading_assignment_texts, path: :reading_assignment_texts, name: :reading_assignment_text_ids, allow_create: false, allow_multiple: true) %>
+  <%# TODO: Enable this back %>
+  <%#= association_picker_field(f, resource.reading_assignment_texts, path: :reading_assignment_texts, name: :reading_assignment_text_ids, allow_create: false, allow_multiple: true) %>
 
-<%# TODO: Enable this back %>
-<%#= association_picker_field(f, resource.content_sources, path: :content_sources, name: :content_source_ids, create_name: :new_content_source_names, allow_create: true, allow_multiple: true) %>
+  <%# TODO: Enable this back %>
+  <%#= association_picker_field(f, resource.content_sources, path: :content_sources, name: :content_source_ids, create_name: :new_content_source_names, allow_create: true, allow_multiple: true) %>
 
-<%# TODO: Enable this back %>
-<%#= association_picker_field(f, resource.topics, path: :topics, name: :topic_ids, create_name: :new_topic_names, allow_create: true) %>
+  <%# TODO: Enable this back %>
+  <%#= association_picker_field(f, resource.topics, path: :topics, name: :topic_ids, create_name: :new_topic_names, allow_create: true) %>
 
-<%# TODO: Enable this back %>
-<%#= association_picker_field(f, resource.tags, path: :tags, name: :tag_ids, create_name: :new_tag_names, allow_create: true) %>
+  <%# TODO: Enable this back %>
+  <%#= association_picker_field(f, resource.tags, path: :tags, name: :tag_ids, create_name: :new_tag_names, allow_create: true) %>
 
-<%# TODO: Enable this back %>
-<%#= association_picker_field(f, resource.standards.distinct, path: :standards, name: :standard_ids) %>
+  <%# TODO: Enable this back %>
+  <%#= association_picker_field(f, resource.standards.distinct, path: :standards, name: :standard_ids) %>
 
-<%# TODO: Enable this back %>
-<%#= resource_picker_field(f, resource.related_resources, path: :related_resources, name: :related_resource_ids) %>
+  <%# TODO: Enable this back %>
+  <%#= resource_picker_field(f, resource.related_resources, path: :related_resources, name: :related_resource_ids) %>
 
-<%# TODO: Enable this back %>
-<%#= resource_picker_field(f, resource.additional_resources, path: :additional_resources, name: :additional_resource_ids) %>
+  <%# TODO: Enable this back %>
+  <%#= resource_picker_field(f, resource.additional_resources, path: :additional_resources, name: :additional_resource_ids) %>
 
-<% if f.object.image_file.url %>
-  <%= f.label :current_image %>
-  <img src="<%= f.object.image_file.url %>" />
-<% end %>
+  <% if f.object.image_file.url %>
+    <%= f.label :current_image %>
+    <img src="<%= f.object.image_file.url %>" />
+  <% end %>
 
-<%= f.input :image_file, as: :file %>
+  <%= f.input :image_file, as: :file %>
+
+</div>
