--- a/app/views/lcms/engine/admin/resources/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/resources/_search_form.html.erb
@@ -1,34 +1,35 @@
-<%= simple_form_for @query, url: lcms_engine.admin_resources_path, html: { class: 'form-inline well admin-resource-search', method: :get } do |f| %>
-
-  <div class="form-row">
+<%= simple_form_for @query, url: lcms_engine.admin_resources_path, html: { method: :get } do |f| %>
+  <div class="row">
     <div class="col">
-      <%= f.input_field :grades, collection: Lcms::Engine::Grades.grades, class: 'form-control selectize', multiple: true, label_method: :humanize, required: false, label: t('.grades') %>
-    </div>
-
-    <div class="col">
-      <%= f.input_field :resource_standards_standard_id_in, as: :select, collection: Lcms::Engine::Standard.all, input_html: { class: 'form-control selectize resource-search-select', multiple: true }, label: t('.standards'), required: false, wrapper_html: { class: 'resource-search-wrap' } %>
-    </div>
-
-    <div class="col">
-      <%= f.input_field :tags_name_in, as: :select, collection: Lcms::Engine::Tag.where_context('tags').select(:id, :name).distinct(:name), input_html: { class: 'form-control selectize resource-search-select', multiple: true }, label: t('.tags'), value_method: :name, required: false, wrapper_html: { class: 'resource-search-wrap' } %>
-    </div>
-  </div>
-
-  <div class="form-row">
-    <div class="col">
-      <%= f.input_field :slug_eq, label: false, required: false, input_html: { class: 'form-control', placeholder: t('.url_slug') } %>
+      <%= f.input :grades, collection: Lcms::Engine::Grades.grades,
+                  input_html: { class: 'selectize', multiple: true },
+                  label: t('.grades'), label_method: :humanize, required: false, wrapper: false %>
     </div>
     <div class="col">
-      <%= f.input_field :resource_type_eq, label: false, as: :select, required: false, input_html: { class: 'form-control', placeholder: Lcms::Engine::Resource.human_attribute_name(:resource_type) },
-                  collection: Lcms::Engine::Resource.resource_types %>
+      <%= f.input :resource_standards_standard_id_in, collection: Lcms::Engine::Standard.all,
+                  input_html: { class: 'selectize', multiple: true }, label: t('.standards'),
+                  required: false %>
     </div>
     <div class="col">
-      <%= f.input_field :title_cont, label: false, required: false, input_html: { class: 'form-control', placeholder: t('.title') } %>
+      <%= f.input :tags_name_in,collection: Lcms::Engine::Tag.where_context('tags').select(:id, :name).distinct(:name),
+                  input_html: { class: 'selectize', multiple: true }, label: t('.tags'),
+                  value_method: :name, required: false %>
+    </div>
+    <div class="col">
+      <%= f.input :resource_type_eq, as: :select, required: false, label: t('.resource_types'),
+                  collection: Lcms::Engine::Resource.resource_types,
+                  input_html: { allow_blank: true } %>
     </div>
   </div>
-
-  <div class="">
-    <%= f.button :submit, t('ui.search'), class: 'resource-search-button', name: nil %>
+  <div class="row">
+    <div class="col">
+      <%= f.input :slug_eq, label: false, required: false, input_html: { class: 'form-control', placeholder: t('.url_slug') } %>
+    </div>
+    <div class="col">
+      <%= f.input :title_cont, label: false, required: false, input_html: { class: 'form-control', placeholder: t('.title') } %>
+    </div>
+    <div class="col">
+      <%= f.button :submit, t('ui.search'), class: 'btn btn-warning', name: nil %>
+    </div>
   </div>
-
 <% end %>
