--- a/app/assets/stylesheets/lcms/engine/application.bootstrap.scss
+++ b/app/assets/stylesheets/lcms/engine/application.bootstrap.scss
@@ -1,2 +1,3 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
+@import 'tom-select/dist/css/tom-select.bootstrap5.min';
