--- a/app/views/lcms/engine/admin/documents/new.html.erb
+++ b/app/views/lcms/engine/admin/documents/new.html.erb
@@ -1,12 +1,23 @@
 <div class="container-fluid">
   <h2 class=text-center><%= t('.page_title') %></h2>
 
-  <%= simple_form_for @document || DocumentForm.new, url: lcms_engine.admin_documents_path do |f| %>
-    <%= f.input :link, error: f.object.errors[:link].first.try(:html_safe), label: t('ui.url') %>
-    <p>
+  <hr>
+
+  <div class="cols-sm">
+    <%= link_to 'Back to list', lcms_engine.admin_documents_path, class: 'btn btn-success' %>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <%= simple_form_for @document || DocumentForm.new, url: lcms_engine.admin_documents_path do |f| %>
+      <%= f.input :link, error: f.object.errors[:link].first.try(:html_safe),
+                  label: false, placeholder: t('ui.url') %>
+      <p>
       <%= f.check_box :async, checked: true %>
       <span><small><%= t('ui.async') %></small></span>
-    </p>
-    <%= f.button :submit, t('.submit') %>
-  <% end %>
+      </p>
+      <%= f.button :submit, t('.submit'), class: 'btn btn-primary' %>
+    <% end %>
+  </div>
 </div>
