--- a/app/views/lcms/engine/admin/standards/edit.html.erb
+++ b/app/views/lcms/engine/admin/standards/edit.html.erb
@@ -5,5 +5,13 @@
 <div class="container-fluid">
   <h2 class=text-center><%= title %></h2>
 
+  <hr>
+
+  <div class="cols-sm">
+    <%= link_to 'Back to list', lcms_engine.admin_standards_path, class: 'btn btn-success' %>
+  </div>
+
+  <hr>
+
   <%= render 'form' %>
 </div>
