--- a/app/views/lcms/engine/admin/documents/_reimport.html.erb
+++ b/app/views/lcms/engine/admin/documents/_reimport.html.erb
@@ -3,5 +3,5 @@
   <%= hidden_field_tag('document_form[link_fs]', lesson.file_fs_url) %>
   <%= hidden_field_tag('document_form[reimport]', 1) %>
   <%= hidden_field_tag('document_form[with_materials]', 0, class: 'c-reimport-with-materials__field') %>
-  <%= submit_tag 'Reimport', class: local_assigns.fetch(:btn_class, 'button small primary'), data: { disable_with: false } %>
+  <%= submit_tag 'Reimport', class: local_assigns.fetch(:btn_class, 'btn btn-warning'), data: { disable_with: false } %>
 <% end %>
