--- a/app/views/lcms/engine/admin/documents/_search_form.html.erb
+++ b/app/views/lcms/engine/admin/documents/_search_form.html.erb
@@ -1,52 +1,56 @@
-<%= simple_form_for :query, url: lcms_engine.admin_documents_path, html: { class: 'form-inline well o-admin-lessons-search', method: :get } do |f| %>
-
-  <div class='row align-bottom align-justify'>
-    <button class="button o-admin-search-subject float-right" type="button" data-toggle="lesson-subject">Select Subject</button>
-    <div class="dropdown-pane bottom" id="lesson-subject" data-dropdown data-auto-focus="true">
+<%= simple_form_for :query, url: lcms_engine.admin_documents_path, html: { 'data-turbo-track': 'reload', method: :get } do |f| %>
+  <div class="row mb-lg-4">
+    <div class="col">
       <%= f.input :subject, label: 'Subject',
-                            required: false,
-                            as: :select,
-                            include_blank: true,
-                            collection: %w(math ela),
-                            label_method: :humanize %>
+                  required: false,
+                  as: :select,
+                  include_blank: true,
+                  collection: Lcms::Engine::Resource::SUBJECTS,
+                  label_method: :humanize %>
     </div>
-
-
-    <button class="button o-admin-search-grades float-right" type="button" data-toggle="lesson-grade">Select Grade</button>
-    <div class="dropdown-pane bottom" id="lesson-grade" data-dropdown data-auto-focus="true">
-      <%= f.input :grade, label: 'Grades',
-                          required: false,
-                          as: :select,
-                          include_blank: true,
-                          collection: Lcms::Engine::Grades.grades,
-                          label_method: :humanize %>
+    <div class="col">
+      <%= f.input :grades, collection: Lcms::Engine::Grades.grades,
+                  input_html: { class: 'selectize', multiple: true },
+                  label: t('.grades'), label_method: :humanize, required: false, wrapper: false %>
     </div>
-
-    <%= f.input :module, placeholder: 'Number', required: false, wrapper_html: { class: 'o-admin-module' } %>
-    <%= f.input :unit, label: 'Unit / Topic', placeholder: 'Number or Letter', required: false, wrapper_html: { class: 'o-admin-unit' } %>
-
-    <%= f.input :sort_by, label: false,
-                      required: false,
-                      as: :select,
-                      collection: %w(curriculum last_update),
-                      include_blank: false,
-                      label_method: ->(s){ "Order by #{s.titleize}" },
-                      wrapper_html: { class: 'o-admin-sort-by' } %>
-
-    <%= f.input :inactive, label: 'Show inactive', required: false, as: :boolean, wrapper_html: { class: 'o-admin-option' } %>
-
-    <%= f.input :broken_materials, label: 'Only with broken materials', required: false, as: :boolean, wrapper_html: { class: 'o-admin-option' } %>
+    <div class="col">
+      <%= f.input :module, placeholder: 'Number', required: false, wrapper_html: { class: 'o-admin-module' } %>
+    </div>
+    <div class="col">
+      <%= f.input :unit, label: 'Unit / Topic', placeholder: 'Number or Letter', required: false, wrapper_html: { class: 'o-admin-unit' } %>
+    </div>
   </div>
-  <div class="row align-bottom align-justify">
-    <%= f.input :search_term, label: false, required: false,
-                            placeholder: 'Enter Search Terms',
-                            wrapper_html: { class: 'o-admin-search-term' } %>
-
-    <%= f.input :only_failed, label: 'Only failed', required: false, as: :boolean, wrapper_html: { class: 'o-admin-option' } %>
-
-    <%= f.input :reimport_required, label: 'Reimport required (materials have been updated)', required: false, as: :boolean, wrapper_html: { class: 'o-admin-option' } %>
-
-    <%= f.button :submit, t('ui.search'), class: 'o-admin-search-submit primary', name: nil %>
+  <div class="row">
+    <div class="col-sm-2">
+      <%= f.input :sort_by, label: false,
+                  required: false,
+                  as: :select,
+                  collection: %w(curriculum last_update),
+                  include_blank: false,
+                  label_method: ->(s){ "Order by #{s.titleize}" },
+                  wrapper_html: { class: 'o-admin-sort-by' } %>
+    </div>
+    <div class="col-sm-2">
+      <%= f.input :inactive, label: 'Show inactive', required: false, as: :boolean, wrapper_html: { class: 'o-admin-option' } %>
+    </div>
+    <div class="col">
+      <%= f.input :broken_materials, label: 'Only with broken materials', required: false, as: :boolean, wrapper_html: { class: 'o-admin-option' } %>
+    </div>
+    <div class="col-sm-2">
+      <%= f.input :only_failed, label: 'Only failed', required: false, as: :boolean, wrapper_html: { class: 'o-admin-option' } %>
+    </div>
+    <div class="col">
+      <%= f.input :reimport_required, label: 'Reimport required (materials have been updated)', required: false, as: :boolean, wrapper_html: { class: 'o-admin-option' } %>
+    </div>
   </div>
-
+  <div class="row">
+    <div class="col-sm-4">
+      <%= f.input :search_term, label: false, required: false,
+                  placeholder: 'Enter Search Terms',
+                  wrapper_html: { class: 'o-admin-search-term' } %>
+    </div>
+    <div class="col">
+      <%= f.button :submit, t('ui.search'), class: 'btn btn-warning', name: nil %>
+    </div>
+  </div>
 <% end %>
