--- a/app/views/lcms/engine/admin/documents/new.html.erb
+++ b/app/views/lcms/engine/admin/documents/new.html.erb
@@ -10,11 +10,13 @@
   <hr>
 
   <div class="row">
-    <%= simple_form_for @document || DocumentForm.new, url: lcms_engine.admin_documents_path do |f| %>
+    <%= simple_form_for @document || DocumentForm.new, url: lcms_engine.admin_documents_path, data: { turbo: false } do |f| %>
       <%= f.input :link, error: f.object.errors[:link].first.try(:html_safe),
                   label: false, placeholder: t('ui.url') %>
       <p>
-      <%= f.check_box :async, checked: true %>
+      <%= params %>
+      <%= params[:async].to_i.zero? %>
+      <%= f.check_box :async, checked: params[:async].to_i.zero? %>
       <span><small><%= t('ui.async') %></small></span>
       </p>
       <%= f.button :submit, t('.submit'), class: 'btn btn-primary' %>
