--- a/app/views/lcms/engine/documents/show_lti.html.erb
+++ b/app/views/lcms/engine/documents/show_lti.html.erb
@@ -4,7 +4,7 @@
 
 <div class="c-ld-page-header cs-bg--<%= @document.color_code_grade %>">
   <div class="container-fluid">
-    <%= render 'header', document: @document, props: @props if @props[:results].present? %>
+    <%= render 'header', document: @document %>
   </div>
 </div>
 <div class="u-bg--light">
@@ -12,4 +12,3 @@
     <%= render 'content', document: @document, lti: true %>
   </div>
 </div>
-<a href="#" class="o-top-scroll-button"><i class="ub-angle-down"></i></a>
